// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` renders when howToFix is empty. - null 1`] = `
<SimpleCardRow
  content={<span />}
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders when howToFix is empty. - undefined 1`] = `
<SimpleCardRow
  content={<span />}
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders when matches are not found 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        This isn't a simple text. It has some words that will be marked as bold.
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders with colors 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        <React.Fragment>
          replaced-color
        </React.Fragment>
      </span>
      <Term>
        isn't
      </Term>
      <span>
        <React.Fragment>
          replaced-color
        </React.Fragment>
      </span>
      <Term>
        bold
      </Term>
      <span>
        <React.Fragment>
          replaced-color
        </React.Fragment>
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders with matches 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        This 
      </span>
      <Term>
        isn't
      </Term>
      <span>
         a simple text. It has some words that will be marked as 
      </span>
      <Term>
        bold
      </Term>
      <span>
        .
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders with whitespace - when match is on a word 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        This is a 
      </span>
      <Term>
        sample
      </Term>
      <span>
         string 
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders with whitespace - when match is within a word 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        This is a s
      </span>
      <Term>
        amp
      </Term>
      <span>
        le string 
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders with whitespace - when string ends with space 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        This is a sample string 
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders with whitespace - when string starts with space 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
         This is a sample string
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;

exports[` renders without formatAsCode property 1`] = `
<SimpleCardRow
  content={
    <span>
      <span>
        This isn't a simple text. It has some words that will be marked as bold.
      </span>
    </span>
  }
  contentClassName="how-to-fix-card-row"
  label="How to fix"
  rowKey="how-to-fix-row-22"
/>
`;
